tests/typing/bad/testfile-instance-8.scala

class C { def m[U, V >: U]() {}; var x = m[Int, Boolean]() }
object Main { def main(args: Array[String]) { } }
